borders overlapping solved

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -5,19 +5,21 @@
 }
 
 body{
-    padding: 5% 10%;
+    padding: 5% 30%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
     margin: 1em;
-    color: #black;
+    color: black;
 }
 
 #calendar{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    border: 1px solid #00adb5;
+    border-top: 1px solid #00adb5;
+    border-right: 1px solid #00adb5;
 }
 
 #month{
@@ -25,23 +27,22 @@ header{
     padding: 0.5em;
     color: #00adb5;
     border-bottom: 1px solid #00adb5;
+    border-left: 1px solid #00adb5;
 }
 
 #week{
     display: flex;
     flex-direction: row;
+    font-size: 10px;
 }
 
 .weekDayName{
     width: 14.2857%;
-    border-right: 1px solid #00adb5;
+    border-left: 1px solid #00adb5;
     border-bottom: 1px solid #00adb5;
     color: #393e46;
     text-align: center;
     padding: 0.5em;
-}
-.weekDayName:last-child{
-    border-right: none;
 }
 
 #datesContainer{
@@ -54,18 +55,28 @@ header{
     position: relative;
     width: 14.2857%;
     padding-top:  14.2857%;
-    border-right: 1px solid #00adb5;
+    border-left: 1px solid #00adb5;
     border-bottom: 1px solid #00adb5;
     background-color: #eeeeee; 
+    font-size:12px;
 }
-
-
 
 .dateNumber{
     position: absolute;
     top: 0;
     left: 0;
     padding: 0.5em;
+}
+
+.fullFillSpace{
+    width: 14.2857%;
+    padding-top:  14.2857%;
+    border-bottom: 1px solid #00adb5;
+    border-left: 1px solid #00adb5;
+}
+
+.fullFillSpace ~ .fullFillSpace{
+    border-left: none;
 }
 
 .text-center{
